--- a/src/views/index.html
+++ b/src/views/index.html
@@ -34,29 +34,44 @@
     <section class="videos-usuario">
         <!--Videos que mas le gustan al usuario-->
         <!-- <video src="./video/video1.mp4" controls></video> -->
-        <article>
-            <img src="./img/tu-falta-de-querer.jpg" alt="" class="music-image">
-            <div class="details text-center">
-                <p>Tu Falta de Querer</p>
-                <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
+        <div class="apartado-canciones">
+            <article>
+                <img src="./img/tu-falta-de-querer.jpg" alt="" class="music-image">
+                <div class="details text-center">
+                    <p>Tu Falta de Querer</p>
+                    <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
+                </div>
+            </article>
+    
+            <article>
+                <img src="./img/hasta-la-raiz.jpeg" alt="" class="music-image">
+                <div class="details text-center">
+                    <p>Hasta la Raiz</p>
+                    <a href="/natalia-lafourcade" class="acerca-cancion">Ver Más</a>
+                </div>
+            </article>
+    
+            <article>
+                <img src="./img/te-regalo.jpg" alt="" class="music-image">
+                <div class="details text-center">
+                    <p>Te Regalo</p>
+                    <a href="/carla-morrinson" class="acerca-cancion">Ver Más</a>
+                </div>
+            </article>
+        </div>
 
-        <article>
-            <img src="./img/hasta-la-raiz.jpeg" alt="" class="music-image">
-            <div class="details text-center">
-                <p>Hasta la Raiz</p>
-                <a href="/natalia-lafourcade" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
-
-        <article>
-            <img src="./img/te-regalo.jpg" alt="" class="music-image">
-            <div class="details text-center">
-                <p>Te Regalo</p>
-                <a href="/carla-morrinson" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
+        <div class="apartado-opciones">
+            <h2 class="text-center">Ordenar Por</h2>
+            <select name="options" class="options">
+                <option value="" class="value-option">Artista</option>
+                <option value="" class="value-option">Nombre de Canción</option>
+                <option value="" class="value-option">Más Visto</option>
+                <option value="" class="value-option">Menos Visto</option>
+                <option value="" class="value-option">Fecha de Publicación</option>
+                <option value="" class="value-option">Más Antiguo</option>
+                <option value="" class="value-option">Más Actual</option>
+            </select>
+        </div>
     </section>
 
     <h2 class="text-center">Videos recomendados</h2>
@@ -64,29 +79,44 @@
     <section class="videos-usuario">
         <!--Videos que se recomiendan en la plataforma-->
         <!-- <video src="./video/video1.mp4" controls class=""></video> -->
-        <article>
-            <img src="./img/tu-falta-de-querer.jpg" alt="" class="music-image">
-            <div class="details text-center">
-                <p>Tu Falta de Querer</p>
-                <a href="" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
+        <div class="apartado-canciones">
+            <article>
+                <img src="./img/tu-falta-de-querer.jpg" alt="" class="music-image">
+                <div class="details text-center">
+                    <p>Tu Falta de Querer</p>
+                    <a href="" class="acerca-cancion">Ver Más</a>
+                </div>
+            </article>
+    
+            <article>
+                <img src="./img/hasta-la-raiz.jpeg" alt="" class="music-image">
+                <div class="details text-center">
+                    <p>Hasta la Raiz</p>
+                    <a href="" class="acerca-cancion">Ver Más</a>
+                </div>
+            </article>
+    
+            <article>
+                <img src="./img/te-regalo.jpg" alt="" class="music-image">
+                <div class="details text-center">
+                    <p>Te Regalo</p>
+                    <a href="" class="acerca-cancion">Ver Más</a>
+                </div>
+            </article>
+        </div>
 
-        <article>
-            <img src="./img/hasta-la-raiz.jpeg" alt="" class="music-image">
-            <div class="details text-center">
-                <p>Hasta la Raiz</p>
-                <a href="" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
-
-        <article>
-            <img src="./img/te-regalo.jpg" alt="" class="music-image">
-            <div class="details text-center">
-                <p>Te Regalo</p>
-                <a href="" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
+        <div class="apartado-opciones">
+            <h2 class="text-center">Ordenar Por</h2>
+            <select name="options" class="options">
+                <option value="" class="value-option">Artista</option>
+                <option value="" class="value-option">Nombre de Canción</option>
+                <option value="" class="value-option">Más Visto</option>
+                <option value="" class="value-option">Menos Visto</option>
+                <option value="" class="value-option">Fecha de Publicación</option>
+                <option value="" class="value-option">Más Antiguo</option>
+                <option value="" class="value-option">Más Actual</option>
+            </select>
+        </div>
     </section>
 
     <footer class="text-center footer-page">
