--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,8 +19,8 @@
             <ul class="elementos-navegacion">
                 <li><a href="/" class="contenido-elemento text-center">Inicio</a></li>
                 <li><a href="/artistas" class="contenido-elemento text-center">Artistas</a></li>
-                <li><a href="" class="contenido-elemento text-center">Iniciar Sesion</a></li>
-                <li><a href="" class="contenido-elemento text-center">Registro</a></li>
+                <li><a href="/users/iniciar-sesion" class="contenido-elemento text-center">Iniciar Sesion</a></li>
+                <li><a href="/users/registro" class="contenido-elemento text-center">Registro</a></li>
             </ul>
         </nav>
     </header>
