--- a/src/views/video-mon-laferte.html
+++ b/src/views/video-mon-laferte.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../../css/estilos.css">
     <title>Cancion: Tu Falta de Querer</title>
 </head>
 
@@ -33,7 +33,7 @@
     <h1 class="text-center title">Tu Falta de Querer - Autor(a): Mon Laferte</h1>
     <section class="video-imagen">
         <!-- <img src="./img/tu-falta-de-querer2.png" alt="" class="img-video"> -->
-        <video src="./video/video1.mp4" controls class="video-musica" autoplay></video>
+        <video src="../../video/video1.mp4" controls class="video-musica" autoplay></video>
         <!-- <img src="./img/tu-falta-de-querer3.jpg" alt="" class="img-video"> -->
     </section>
 
@@ -61,18 +61,18 @@
 
     <section class="downloads text-center">
         <p>
-            <a download="tu-falta-de-querer.mp4" href="./video/video1.mp4" class="download">Descargar video</a>
+            <a download="tu-falta-de-querer.mp4" href="../../video/video1.mp4" class="download">Descargar video</a>
         </p>
         <p>ó</p>
         <p>
-            <a download="tu-falta-de-querer.mp3" href="./video/video1.mp4" class="download">Descargar audio</a>
+            <a download="tu-falta-de-querer.mp3" href="../../video/video1.mp4" class="download">Descargar audio</a>
         </p>
     </section>
 
     <h2 class="text-center">Más Temas Relacionados con Mon Laferte</h2>
     <section class="videos-usuario">
         <article>
-            <img src="./img/pa-donde-se-fue.jpg" alt="" class="img-music-recomended">
+            <img src="../../img/pa-donde-se-fue.jpg" alt="" class="img-music-recomended">
             <div class="details text-center">
                 <p>Pa' Donde se Fue</p>
                 <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
@@ -80,7 +80,7 @@
         </article>
 
         <article>
-            <img src="./img/mi-buen-amor.jpg" alt="" class="img-music-recomended">
+            <img src="../../img/mi-buen-amor.jpg" alt="" class="img-music-recomended">
             <div class="details text-center">
                 <p>Mi Buen Amor</p>
                 <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
@@ -88,7 +88,7 @@
         </article>
 
         <article>
-            <img src="./img/amarrame.jpg" alt="" class="img-music-recomended">
+            <img src="../../img/amarrame.jpg" alt="" class="img-music-recomended">
             <div class="details text-center">
                 <p>Amárrame</p>
                 <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
@@ -96,7 +96,7 @@
         </article>
 
         <article>
-            <img src="./img/antes-de-ti.jpg" alt="" class="img-music-recomended">
+            <img src="../../img/antes-de-ti.jpg" alt="" class="img-music-recomended">
             <div class="details text-center">
                 <p>Antes de Ti</p>
                 <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
