--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -47,7 +47,7 @@ body {
     padding: 30px;
 }
 
-.options {
+.options, .options-roles {
     width: 25vw;
     height: 10vh;
     text-align: center;
@@ -58,7 +58,7 @@ body {
     margin: auto;
 }
 
-.value-option:hover {
+.value-option:hover, .button:hover {
     background-color: black;
     color: white;
 }
@@ -201,6 +201,46 @@ article div p {
     width: 32vw;
 }
 
+.form-login {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    height: 50vh;
+}
+
+.form-register {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+}
+
+.input-data {
+    width: 60vw;
+    height: 5vh;
+}
+
+label {
+    font-weight: bold;
+    font-size: 30px;
+    width: 60vw;
+}
+
+.buttons {
+    margin-top: 40px;
+}
+
+.button {
+    width: 15vw;
+    height: 7vh;
+    font-family: 'Patrick Hand', cursive;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 
 @media(min-width: 800px) {
 
@@ -228,6 +268,15 @@ article div p {
 
     .videos-usuario {
         flex-direction: column;
+    }
+
+    .button {
+        width: 30vw;
+        height: 7vh;
+    }
+
+    .options-roles {
+        width: 50vw;
     }
 
     
@@ -263,5 +312,14 @@ article div p {
     article div p {
         font-weight: bold;
         font-size: 15px;
+    }
+
+    .button {
+        width: 30vw;
+        height: 7vh;
+    }
+
+    .options-roles {
+        width: 50vw;
     }
 }
