--- a/src/views/vista-ejemplo.ejs
+++ b/src/views/vista-ejemplo.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <p>canciones: </p>
-        <p><%=canciones %></p>
+        <p><% for(let i = 0; i <= canciones.length; i++) {%></p>
+            <p><%=canciones[2][i]%></p>
+           <%}%>
 </body>
 </html>
