--- a/src/views/artista-especifico.ejs
+++ b/src/views/artista-especifico.ejs
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Inicio</title>
+    <title>Nombre de Artista</title>
 </head>
-
 <body>
     <h1 class="text-center title">Hola!!! Bienvenid@ a <span class="world-music">WorldMusic</span></h1>
 
@@ -28,43 +26,37 @@
     <section>
         <input type="text" name="search-bar" class="search-bar" placeholder="Buscar en WorldMusic...">
     </section>
-
-    <h2 class="text-center">Videos mas vistos por el usuario</h2>
-    <section class="videos-usuario">
-        <% for(let i=0; i < datos.length; i++) {%>
-        <!--Videos que mas le gustan al usuario-->
-        <!-- <video src="./video/video1.mp4" controls></video> -->
-        <article>
-            <img src="../img/<%= datos[i].imagen%>" alt="" class="music-image">
-            <div class="details text-center">
-                <p><%=datos[i].canciones[i]%></p>
-                <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
-        <% }%>
-    </section>
-
-    <h2 class="text-center">Videos recomendados</h2>
-
+    <h2 class="text-center">Canciones de <%=datos.artista%></h2>
     <section class="videos-usuario">
         <!--Videos que se recomiendan en la plataforma-->
         <!-- <video src="./video/video1.mp4" controls class=""></video> -->
-        <% for(let i=0; i < datos.length; i++) {%>
-            <!--Videos que mas le gustan al usuario-->
-            <!-- <video src="./video/video1.mp4" controls></video> -->
-            <article>
-                <img src="../img/<%= datos[i].imagen%>" alt="" class="music-image">
-                <div class="details text-center">
-                    <p><%=datos[i].canciones[i]%></p>
-                    <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
-                </div>
-            </article>
-        <% }%>
+        <div class="apartado-canciones">
+            <% for(let i = 0; i < 3; i++) { %>
+                <article>
+                    <img src="../img/<%=datos[i].imagen %>" alt="" class="music-image">
+                    <div class="details text-center">
+                        <p><%= datos[i].cancion%></p>
+                        <a href="/artistas/<%= datos[i].apodo%>/<%=datos[i].id%>" class="acerca-cancion">Ver Más</a>
+                    </div>
+                </article>
+            <% } %>
+        </div>
+
+        <div class="apartado-opciones">
+            <h2 class="text-center">Ordenar Por</h2>
+            <select name="options" class="options">
+                <option value="" class="value-option">Nombre de Canción</option>
+                <option value="" class="value-option">Más Visto</option>
+                <option value="" class="value-option">Menos Visto</option>
+                <option value="" class="value-option">Fecha de Publicación</option>
+                <option value="" class="value-option">Más Antiguo</option>
+                <option value="" class="value-option">Más Actual</option>
+            </select>
+        </div>
     </section>
 
     <footer class="text-center footer-page">
         &copy; Derechos reservados. WorldMusic - German Arciniegas 2022-2022 :)
     </footer>
 </body>
-
 </html>
