--- a/src/views/video-mon-laferte.ejs
+++ b/src/views/video-mon-laferte.ejs
@@ -30,46 +30,31 @@
         <input type="text" name="search-bar" class="search-bar" placeholder="Buscar en WorldMusic...">
     </section>
 
-    <h1 class="text-center title">Tu Falta de Querer - Autor(a): Mon Laferte</h1>
+    <h1 class="text-center title"><%=datos[id].cancion %> - Autor(a): <%= datos[id].artista%></h1>
     <section class="video-imagen">
         <!-- <img src="./img/tu-falta-de-querer2.png" alt="" class="img-video"> -->
-        <video src="../../video/video1.mp4" controls class="video-musica" autoplay></video>
+        <video src="../../video/<%=datos[id].video %>" controls class="video-musica" autoplay></video>
         <!-- <img src="./img/tu-falta-de-querer3.jpg" alt="" class="img-video"> -->
     </section>
 
-    <h2 class="text-center">Descripcion de Tu Falta de Querer</h2>
+    <h2 class="text-center">Descripcion de <%=datos[id].cancion %></h2>
     <section>
         <p class="descripcion-cancion">
-            Este himno de despecho esconde una triste historia de infidelidad que llevó a la cantante a la depresión y a
-            escribir su canción más famosa. Desde su lanzamiento, "Tu falta de querer" Mon Laferte se convirtió en todo
-            un himno de dolor, despecho e incluso empoderamiento femenino.
-            En una de sus tantas presentaciones, Mon Laferte inicia su concierto asegurando que “Tu falta de querer”
-            narra un pasaje de su vida sobre una decepción que casi la lleva a cometer suicidio.
-
-            “Tengo una canción súper triste... que me pusieron el cuerno. Sí, es verdad, esto es en serio. Me pusieron
-            el cuerno hace como un año. Me dio depresión y me quise suicidar”, se le escucha decir.
-
-            Al notar que el público comenzó a reírse, Mon Laferte pidió que no lo hagan ya que se considera una
-            superviviente. “Como se ríen, pero si esto es verdad. ¿Por qué se burlan de mi desgracia?”, dijo.
-
-            Asimismo, la chilena confesó en una entrevista que “Tu falta de querer” la escribió para no volver a
-            sentirse triste: “En este momento ‘depre’ que tenía, de repente tuve como una luz y le digo a mis amigas
-            ‘Ahora voy a hacer una canción súper buena y que me va a ayudar a que se me quite toda esta tristeza’... me
-            fui a la pieza (apartamento) y grabé en el teléfono la melodía”, contó para el medio City Lab.
+            <%= datos[id].descripcion %>
         </p>
     </section>
 
     <section class="downloads text-center">
         <p>
-            <a download="tu-falta-de-querer.mp4" href="../../video/video1.mp4" class="download">Descargar video</a>
+            <a download="tu-falta-de-querer.mp4" href="../../video/<%=datos[id].video%>" class="download">Descargar video</a>
         </p>
         <p>ó</p>
         <p>
-            <a download="tu-falta-de-querer.mp3" href="../../video/video1.mp4" class="download">Descargar audio</a>
+            <a download="tu-falta-de-querer.mp3" href="../../video/<%=datos[id].video%>" class="download">Descargar audio</a>
         </p>
     </section>
 
-    <h2 class="text-center">Más Temas Relacionados con Mon Laferte</h2>
+    <h2 class="text-center">Más Temas Relacionados con <%=datos[id].artista %></h2>
     <section class="videos-usuario">
         <article>
             <img src="../../img/pa-donde-se-fue.jpg" alt="" class="img-music-recomended">
