Se realiza crud de usuarios y se implementa method-override

--- a/src/views/modificar-usuario.ejs
+++ b/src/views/modificar-usuario.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Registro de Usuarios a WorldMusic</title>
+    <title>Modificacion de Usuarios de WorldMusic</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <h1 class="title text-center">Registro de Usuarios</h1>
+    <h1 class="title text-center">Modificación de Usuarios</h1>
     <form action="/users/registro" method="post" class="form-register">
         <label for="correo">Nombres</label>
         <input type="text" name="nombres" id="nombres" class="input-data" placeholder="Nombres Completos">
