--- a/src/views/user-edit.ejs
+++ b/src/views/user-edit.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../../css/estilos.css">
     <title>Registro de Usuarios a WorldMusic</title>
 </head>
 
@@ -25,19 +25,19 @@
         </nav>
     </header>
 
-    <h1 class="title text-center">Registro de Usuarios</h1>
+    <h1 class="title text-center">Modificacion de Usuarios - Usuario: <%= usuario.nombres %></h1>
     <form action="/users/registro" method="post" class="form-register">
         <label for="correo">Nombres</label>
-        <input type="text" name="nombres" id="nombres" class="input-data" placeholder="Nombres Completos">
+        <input type="text" name="nombres" id="nombres" class="input-data" placeholder="Nombres Completos" value="<%=usuario.nombres %>">
 
         <label for="apellidos">Apellidos</label>
-        <input type="text" name="apellidos" id="apellidos" class="input-data" placeholder="Apellidos Completos">
+        <input type="text" name="apellidos" id="apellidos" class="input-data" placeholder="Apellidos Completos" value="<%=usuario.apellidos %>">
 
         <label for="correo">Telefono</label>
-        <input type="tel" name="telefono" id="telefono" class="input-data" placeholder="+573003000000">
+        <input type="tel" name="telefono" id="telefono" class="input-data" placeholder="+573003000000" value="<%=usuario.telefono %>">
 
         <label for="correo">Correo</label>
-        <input type="email" name="email" id="email" class="input-data" placeholder="usuario@ejemplo.com">
+        <input type="email" name="email" id="email" class="input-data" placeholder="usuario@ejemplo.com" value="<%=usuario.email %>">
 
         <label for="correo">Clave</label>
         <input type="password" name="clave" id="clave" class="input-data" placeholder="*****************">
