--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -1,31 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <title>Modificacion de Usuarios de WorldMusic</title>
-</head>
+<%-include('../partials/head');%>
 
 <body>
     <h1 class="text-center title">Hola!!! Bienvenid@ a <span class="world-music">WorldMusic</span></h1>
 
-    <header>
-        <!--Banner-->
-        <!-- <img src="./img/foto.jpg" alt=""> -->
-        <nav class="navegacion">
-            <ul class="elementos-navegacion">
-                <li><a href="/" class="contenido-elemento text-center">Inicio</a></li>
-                <li><a href="/artistas" class="contenido-elemento text-center">Artistas</a></li>
-                <li><a href="/users/iniciar-sesion" class="contenido-elemento text-center">Iniciar Sesion</a></li>
-                <li><a href="" class="contenido-elemento text-center">Registro</a></li>
-            </ul>
-        </nav>
-    </header>
+    <%-include('../partials/header'); %>
 
-    <h1 class="title text-center">Modificación de Usuarios</h1>
+    <h1 class="title text-center">Registro de Usuarios</h1>
     <form action="/users/registro" method="post" class="form-register">
         <label for="correo">Nombres</label>
         <input type="text" name="nombres" id="nombres" class="input-data" placeholder="Nombres Completos">
@@ -67,9 +50,7 @@
         </div>
     </form>
 
-    <footer class="text-center footer-page">
-        &copy; Derechos reservados. WorldMusic - German Arciniegas 2022-2022 :)
-    </footer>
+    <%-include('../partials/footer'); %>
 </body>
 
 </html>
