--- a/src/views/users/delete-user.ejs
+++ b/src/views/users/delete-user.ejs
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/estilos.css">
-    <title>Eliminar Usuario</title>
-</head>
+<%-include('../partials/head');%>
 <body>
     <h1 class="text-center title">¿Deseas eliminar el usuario <%= usuario %></h1>
 
