Se arreglan rutas del index con respecto a los videos

--- a/src/views/artistas/index.ejs
+++ b/src/views/artistas/index.ejs
@@ -22,7 +22,7 @@
                     <img src="../img/<%= datos[i].imagen%>" alt="" class="music-image">
                     <div class="details text-center">
                         <p><%=datos[i].cancion%></p>
-                        <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
+                        <a href="/artistas/<%=datos[i].apodo%>/<%=datos[i].id%>" class="acerca-cancion">Ver Más</a>
                     </div>
                 </article>
             <% }%>
@@ -54,7 +54,7 @@
                     <img src="../img/<%= datos[i].imagen%>" alt="" class="music-image">
                     <div class="details text-center">
                         <p><%=datos[i].cancion%></p>
-                        <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
+                        <a href="/artistas/<%=datos[i].apodo%>/<%=datos[i].id%>" class="acerca-cancion">Ver Más</a>
                     </div>
                 </article>
             <% }%>
