--- a/src/views/artistas/video-mon-laferte.ejs
+++ b/src/views/artistas/video-mon-laferte.ejs
@@ -29,11 +29,11 @@
 
     <section class="downloads text-center">
         <p>
-            <a download="tu-falta-de-querer.mp4" href="../../video/<%=datos[id].video%>" class="download">Descargar video</a>
+            <a download="<%=datos[id].cancion%>.mp4" href="../../video/<%=datos[id].video%>" class="download">Descargar video</a>
         </p>
         <p>ó</p>
         <p>
-            <a download="tu-falta-de-querer.mp3" href="../../video/<%=datos[id].video%>" class="download">Descargar audio</a>
+            <a download="<%=datos[id].cancion%>.mp3" href="../../video/<%=datos[id].video%>" class="download">Descargar audio</a>
         </p>
     </section>
 
