--- a/src/views/artistas/artista-especifico.ejs
+++ b/src/views/artistas/artista-especifico.ejs
@@ -28,10 +28,10 @@
         <div class="apartado-opciones">
             <h2 class="text-center">Ordenar Por</h2>
             <select name="options" class="options">
-                <option value="" class="value-option">Nombre de Canción</option>
+                <option value="" class="value-option">Nombre Canción</option>
                 <option value="" class="value-option">Más Visto</option>
                 <option value="" class="value-option">Menos Visto</option>
-                <option value="" class="value-option">Fecha de Publicación</option>
+                <option value="" class="value-option">Fecha Publicación</option>
                 <option value="" class="value-option">Más Antiguo</option>
                 <option value="" class="value-option">Más Actual</option>
             </select>
