--- a/src/views/artistas/video-mon-laferte.ejs
+++ b/src/views/artistas/video-mon-laferte.ejs
@@ -38,7 +38,7 @@
     </section>
 
     <h2 class="text-center">Más Temas Relacionados con <%=datos[id].artista %></h2>
-    <section class="videos-usuario">
+    <section class="temas-relacionados">
         <article>
             <img src="../../img/pa-donde-se-fue.jpg" alt="" class="img-music-recomended">
             <div class="details text-center">
@@ -59,14 +59,6 @@
             <img src="../../img/amarrame.jpg" alt="" class="img-music-recomended">
             <div class="details text-center">
                 <p>Amárrame</p>
-                <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
-            </div>
-        </article>
-
-        <article>
-            <img src="../../img/antes-de-ti.jpg" alt="" class="img-music-recomended">
-            <div class="details text-center">
-                <p>Antes de Ti</p>
                 <a href="/mon-laferte" class="acerca-cancion">Ver Más</a>
             </div>
         </article>
