--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -35,14 +35,28 @@
         </select>
 
         <label for="correo">Intereses</label>
-        Pop<input type="checkbox" name="interes" id="interes" class="input-data" value="pop">
-        Pop-Rock<input type="checkbox" name="interes" id="interes" class="input-data" value="pop-rock">
-        Pop-Romantico<input type="checkbox" name="interes" id="interes" class="input-data" value="pop-romantico">
-        Romantico<input type="checkbox" name="interes" id="interes" class="input-data" value="romantico">
-        Rock<input type="checkbox" name="interes" id="interes" class="input-data" value="rock">
-        Baladas<input type="checkbox" name="interes" id="interes" class="input-data" value="baladas">
-        Salsa<input type="checkbox" name="interes" id="interes" class="input-data" value="salsa">
-        Reggaeton<input type="checkbox" name="interes" id="interes" class="input-data" value="reggaeton">
+        <div class="cajitas-check">
+            <ul class="part-one">
+                <label for="">Pop</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop"></li>
+                <label for="">Pop Rock</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop-rock"></li>
+                <label for="">Pop Romantico</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop-romantico"></li>
+                <label for="">Romantico</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="romantico"></li>
+            </ul>
+            <ul class="part-two">
+                <label for="">Rock</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="rock"></li>
+                <label for="">Baladas</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="baladas"></li>
+                <label for="">Salsa</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="salsa"></li>
+                <label for="">Reggaeton</label>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="reggaeton"></li>
+            </ul>
+        </div>
 
         <div class="buttons">
             <input type="submit" value="Enviar" class="button">
